[gd_scene load_steps=7 format=3 uid="uid://ckqvebem5ktgh"]

[ext_resource type="Texture2D" uid="uid://bpsrhv2naxgjk" path="res://assets/images/empty-background.png" id="1_7v0nm"]
[ext_resource type="Shader" path="res://src/main-menu/main-menu.gdshader" id="2_he8ei"]
[ext_resource type="Script" path="res://src/main-menu/menu-button-main.gd" id="3_uvbfy"]
[ext_resource type="Script" path="res://src/main-menu/menu-button.gd" id="4_lknto"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfuk2"]
shader = ExtResource("2_he8ei")
shader_parameter/blur = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wou5l"]
shader = ExtResource("2_he8ei")
shader_parameter/blur = 0.0

[node name="main-menu" type="Node2D"]

[node name="Empty-background" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("1_7v0nm")
centered = false

[node name="ColorRect" type="ColorRect" parent="Empty-background"]
material = SubResource("ShaderMaterial_xfuk2")
offset_right = 295.0
offset_bottom = 603.0

[node name="Control" type="Control" parent="."]
material = SubResource("ShaderMaterial_wou5l")
layout_mode = 3
anchors_preset = 0
offset_right = 306.0
offset_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -68.0
offset_right = 64.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="ButtonControl" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Button" type="Button" parent="Control/VBoxContainer/ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("3_uvbfy")

[node name="Label" type="Label" parent="Control/VBoxContainer/ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
vertical_alignment = 1

[node name="LineControl" type="Control" parent="Control/VBoxContainer/ButtonControl"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="Control/VBoxContainer/ButtonControl/LineControl"]
points = PackedVector2Array(2.08165e-12, 1, 52, 1)
width = 2.0

[node name="ButtonControl2" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="ButtonS" type="Button" parent="Control/VBoxContainer/ButtonControl2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("4_lknto")

[node name="Label" type="Label" parent="Control/VBoxContainer/ButtonControl2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
vertical_alignment = 1

[node name="LineControl" type="Control" parent="Control/VBoxContainer/ButtonControl2"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="Control/VBoxContainer/ButtonControl2/LineControl"]
scale = Vector2(1e-05, 1)
points = PackedVector2Array(2.08165e-12, 1, 52, 1)
width = 2.0

[node name="ButtonControl3" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="ButtonS" type="Button" parent="Control/VBoxContainer/ButtonControl3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("4_lknto")

[node name="Label" type="Label" parent="Control/VBoxContainer/ButtonControl3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"
vertical_alignment = 1

[node name="LineControl" type="Control" parent="Control/VBoxContainer/ButtonControl3"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="Control/VBoxContainer/ButtonControl3/LineControl"]
scale = Vector2(1e-05, 1)
points = PackedVector2Array(2.08165e-12, 1, 52, 1)
width = 2.0

[node name="ButtonControl4" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="ButtonS" type="Button" parent="Control/VBoxContainer/ButtonControl4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("4_lknto")

[node name="Label" type="Label" parent="Control/VBoxContainer/ButtonControl4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit :("
vertical_alignment = 1

[node name="LineControl" type="Control" parent="Control/VBoxContainer/ButtonControl4"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="Control/VBoxContainer/ButtonControl4/LineControl"]
scale = Vector2(1e-05, 1)
points = PackedVector2Array(2.08165e-12, 1, 52, 1)
width = 2.0

[connection signal="mouse_entered" from="Control/VBoxContainer/ButtonControl/Button" to="Control/VBoxContainer/ButtonControl/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/ButtonControl/Button" to="Control/VBoxContainer/ButtonControl/Button" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Control/VBoxContainer/ButtonControl2/ButtonS" to="Control/VBoxContainer/ButtonControl2/ButtonS" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/ButtonControl2/ButtonS" to="Control/VBoxContainer/ButtonControl2/ButtonS" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Control/VBoxContainer/ButtonControl3/ButtonS" to="Control/VBoxContainer/ButtonControl3/ButtonS" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/ButtonControl3/ButtonS" to="Control/VBoxContainer/ButtonControl3/ButtonS" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Control/VBoxContainer/ButtonControl4/ButtonS" to="Control/VBoxContainer/ButtonControl4/ButtonS" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/ButtonControl4/ButtonS" to="Control/VBoxContainer/ButtonControl4/ButtonS" method="_on_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonControl4/ButtonS" to="Control/VBoxContainer/ButtonControl4/ButtonS" method="_on_pressed"]
